RESOLVED FIXED188107
[iOS] Spelling suggestions cannot be selected in focused form controls when zoomed in
https://bugs.webkit.org/show_bug.cgi?id=188107
Summary [iOS] Spelling suggestions cannot be selected in focused form controls when z...
Wenson Hsieh
Reported 2018-07-27 12:12:37 PDT
Attachments
Patch (6.42 KB, patch)
2018-07-27 12:41 PDT, Wenson Hsieh
no flags
Adjust layout test (3.77 KB, patch)
2018-07-31 20:24 PDT, Wenson Hsieh
no flags
Adjust layout test (3.85 KB, patch)
2018-07-31 20:35 PDT, Wenson Hsieh
dbates: review+
Patch for landing (4.18 KB, patch)
2018-07-31 21:43 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-07-27 12:41:53 PDT
WebKit Commit Bot
Comment 2 2018-07-31 13:19:15 PDT
Comment on attachment 345938 [details] Patch Clearing flags on attachment: 345938 Committed r234436: <https://trac.webkit.org/changeset/234436>
WebKit Commit Bot
Comment 3 2018-07-31 13:19:17 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-07-31 13:20:21 PDT
Daniel Bates
Comment 5 2018-07-31 18:11:01 PDT
Comment on attachment 345938 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=345938&action=review > LayoutTests/fast/forms/ios/click-should-not-suppress-misspelling-expected.txt:3 > +TEST COMPLETE This output does not look correct. We’re missing the description and this line should be after all other lines.
Wenson Hsieh
Comment 6 2018-07-31 18:53:14 PDT
Comment on attachment 345938 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=345938&action=review >> LayoutTests/fast/forms/ios/click-should-not-suppress-misspelling-expected.txt:3 >> +TEST COMPLETE > > This output does not look correct. We’re missing the description and this line should be after all other lines. This was generated by running the layout test. I'll run it again to double check. Note that the description is only written when !window.testRunner as a courtesy to anyone running the test manually.
Wenson Hsieh
Comment 7 2018-07-31 19:11:47 PDT
Comment on attachment 345938 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=345938&action=review >>> LayoutTests/fast/forms/ios/click-should-not-suppress-misspelling-expected.txt:3 >>> +TEST COMPLETE >> >> This output does not look correct. We’re missing the description and this line should be after all other lines. > > This was generated by running the layout test. I'll run it again to double check. > > Note that the description is only written when !window.testRunner as a courtesy to anyone running the test manually. I just finished a clean build of trunk iOS simulator (using iOS 12), ran this test, and confirmed that it passes.
Daniel Bates
Comment 8 2018-07-31 19:48:27 PDT
(In reply to Wenson Hsieh from comment #7) > Comment on attachment 345938 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=345938&action=review > > >>> LayoutTests/fast/forms/ios/click-should-not-suppress-misspelling-expected.txt:3 > >>> +TEST COMPLETE > >> > >> This output does not look correct. We’re missing the description and this line should be after all other lines. > > > > This was generated by running the layout test. I'll run it again to double check. > > > > Note that the description is only written when !window.testRunner as a courtesy to anyone running the test manually. > > I just finished a clean build of trunk iOS simulator (using iOS 12), ran > this test, and confirmed that it passes. I didn’t mean to imply there is a correctness issue by my remark. I meant to say that the output of the test does not conform to the expected output of a test that uses js-test. In particular, a js-test should emit a description, plus a line that states that there will be a series of PASS messages, PASS/FAIL output, a successfully parsed line and finally a TEST COMPLETE line.
Daniel Bates
Comment 9 2018-07-31 19:52:22 PDT
Wenson Hsieh
Comment 10 2018-07-31 20:23:59 PDT
Reopening to attach new patch.
Wenson Hsieh
Comment 11 2018-07-31 20:24:00 PDT
Created attachment 346248 [details] Adjust layout test
Wenson Hsieh
Comment 12 2018-07-31 20:24:21 PDT
(In reply to Daniel Bates from comment #9) > One example of the expected output ordering can be seen in > <https://trac.webkit.org/browser/webkit/trunk/LayoutTests/fast/events/fire- > mousedown-while-pressing-mouse-button-expected.txt> This example lacks a "PASS successfullyParsed is true" line. I used a more recent change as reference (r233387).
Wenson Hsieh
Comment 13 2018-07-31 20:35:12 PDT
Created attachment 346250 [details] Adjust layout test
Daniel Bates
Comment 14 2018-07-31 21:28:58 PDT
Comment on attachment 346250 [details] Adjust layout test View in context: https://bugs.webkit.org/attachment.cgi?id=346250&action=review Thank you Wenson for fixing the test. > LayoutTests/fast/forms/ios/click-should-not-suppress-misspelling.html:25 > +description(`To manually test, tap the input field to bring up the keyboard, and then tap on a part of the word in Please start this description with the purpose of the test. For example, in <https://trac.webkit.org/browser/webkit/trunk/LayoutTests/fast/events/fire-mousedown-while-pressing-mouse-button-expected.txt> the description starts with "This test verifies that we fire a mousedown event whenever pressing and holding a mouse button...". Minor: No need to use grave quotes as we do need any string interpolation. Double quotes are sufficient.
Wenson Hsieh
Comment 15 2018-07-31 21:43:18 PDT
Created attachment 346258 [details] Patch for landing
WebKit Commit Bot
Comment 16 2018-07-31 22:21:33 PDT
Comment on attachment 346258 [details] Patch for landing Clearing flags on attachment: 346258 Committed r234449: <https://trac.webkit.org/changeset/234449>
Note You need to log in before you can comment on or make changes to this bug.